samples/_failures_safe/1761426873_8777b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_437e933e.c: In function ‘main’:
./samples/SAFE/__tmp_437e933e.c:171:5: error: expected declaration or statement at end of input
  171 |     }
      |     ^
